--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/example_db?autoReconnect=true&useSSL=false
 spring.datasource.username=example_user
 spring.datasource.password=example_pass
+spring.jpa.open-in-view=false
+logging.level.web=DEBUG
